--- a/config/server.properties
+++ b/config/server.properties
@@ -22,7 +22,7 @@ broker.id=0
 
 ############################# Socket Server Settings #############################
 
-# The address the socket server listens on. It will get the value returned from 
+# The address the socket server listens on. It will get the value returned from
 # java.net.InetAddress.getCanonicalHostName() if not configured.
 #   FORMAT:
 #     listeners = listener_name://host_name:port
@@ -30,9 +30,10 @@ broker.id=0
 #     listeners = PLAINTEXT://your.host.name:9092
 #listeners=PLAINTEXT://:9092
 
-# Hostname and port the broker will advertise to producers and consumers. If not set, 
+# Hostname and port the broker will advertise to producers and consumers. If not set,
 # it uses the value for "listeners" if configured.  Otherwise, it will use the value
 # returned from java.net.InetAddress.getCanonicalHostName().
+# 主要是为外网访问用的 内网环境访问kafka不需要配置
 #advertised.listeners=PLAINTEXT://your.host.name:9092
 
 # Maps listener names to security protocols, the default is for them to be the same. See the config documentation for more details
@@ -100,6 +101,7 @@ transaction.state.log.min.isr=1
 # from the end of the log.
 
 # The minimum age of a log file to be eligible for deletion due to age
+# log.retention.hours|minutes|ms 一条消息数据保存的时间 优先级ms > minutes > hours
 log.retention.hours=168
 
 # A size-based retention policy for logs. Segments are pruned from the log unless the remaining
@@ -107,7 +109,11 @@ log.retention.hours=168
 #log.retention.bytes=1073741824
 
 # The maximum size of a log segment file. When this size is reached a new log segment will be created.
+# broker为消息保存的总磁盘容量大小 -1代表broker保存多少数据都可以 broker不会做阻拦
 log.segment.bytes=1073741824
+
+# 控制broker能够接收的最大消息大小 默认值1000012 不到1MB
+# message.max.bytes=1073741824
 
 # The interval at which log segments are checked to see if they can be deleted according
 # to the retention policies
@@ -120,6 +126,9 @@ log.retention.check.interval.ms=300000
 # server. e.g. "127.0.0.1:3000,127.0.0.1:3001,127.0.0.1:3002".
 # You can also append an optional chroot string to the urls to specify the
 # root directory for all kafka znodes.
+# 多个kafka集群共用一个zk集群时可使用chroot如下配置
+# zookeeper.connect=localhost:2181,localhost:2182,localhost:2183/kafka1
+# zookeeper.connect=localhost:2181,localhost:2182,localhost:2183/kafka2
 zookeeper.connect=localhost:2181
 
 # Timeout in ms for connecting to zookeeper
@@ -134,3 +143,12 @@ zookeeper.connection.timeout.ms=18000
 # We override this to 0 here as it makes for a better out-of-the-box experience for development and testing.
 # However, in production environments the default value of 3 seconds is more suitable as this will help to avoid unnecessary, and potentially expensive, rebalances during application startup.
 group.initial.rebalance.delay.ms=0
+
+# 是否允许自动创建Topic
+# auto.create.topics.enable=false
+
+# 是否让落后很多的副本参与leader选举 设置为false会导致集群不可用
+# unclean.leader.election.enable=false
+
+# 是否允许Kafka定期对一些Topic分区进行leader重选举
+# auto.leader.rebalance.enable=false
