--- a/config/server.properties
+++ b/config/server.properties
@@ -152,3 +152,15 @@ group.initial.rebalance.delay.ms=0
 
 # 是否允许Kafka定期对一些Topic分区进行leader重选举
 # auto.leader.rebalance.enable=false
+
+# ===============================Topic级别参数有两种设置方式===============================
+# 1.创建Topic时设置  kafka-topics创建Topic使用--config参数指定配置
+# 2.修改Topic时设置  kafka-configs设置
+# Topic消息的最长保存时间 默认7天
+# retention.ms
+
+# 为该Topic预留多大的磁盘空间
+# retention.bytes
+
+# 该broker能正常接收该Topic的最大消息大小
+# max.message.bytes
