--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,9 @@ import java.nio.charset.StandardCharsets
 buildscript {
   repositories {
     mavenCentral()
+    // maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
     jcenter()
     maven { url "https://plugins.gradle.org/m2/"}
-//    maven { url "http://maven.aliyun.com/nexus/content/groups/public/"}
   }
   apply from: file('gradle/buildscript.gradle'), to: buildscript
   apply from: "$rootDir/gradle/dependencies.gradle"
