--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,10 @@
 import org.ajoberstar.grgit.Grgit
 
 import java.nio.charset.StandardCharsets
-
+ScalaCompileOptions.metaClass.daemonServer = true
+ScalaCompileOptions.metaClass.fork = true
+ScalaCompileOptions.metaClass.useAnt = false
+ScalaCompileOptions.metaClass.useCompileDaemon = false
 buildscript {
   repositories {
     mavenCentral()
