--- a/config/server.properties
+++ b/config/server.properties
@@ -100,7 +100,7 @@ log.retention.check.interval.ms=300000
 # 多个kafka集群共用一个zk集群时可使用chroot如下配置 表明在哪个节点下专门记录某个节点的元数据
 # zookeeper.connect=localhost:2181,localhost:2182,localhost:2183/kafka1
 # zookeeper.connect=localhost:2181,localhost:2182,localhost:2183/kafka2
-zookeeper.connect=localhost:2181
+zookeeper.connect=127.0.0.1:2181/kafka-metadata
 # Timeout in ms for connecting to zookeeper
 zookeeper.connection.timeout.ms=18000
 ############################# Group Coordinator Settings #############################
