--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -187,6 +187,7 @@ libs += [
   scalatest: "org.scalatest:scalatest_$versions.baseScala:$versions.scalatest",
   slf4jApi: "org.slf4j:slf4j-api:$versions.slf4j",
   slf4jlog4j: "org.slf4j:slf4j-log4j12:$versions.slf4j",
+  slf4jNop: "org.slf4j:slf4j-nop:$versions.slf4j",
   snappy: "org.xerial.snappy:snappy-java:$versions.snappy",
   zookeeper: "org.apache.zookeeper:zookeeper:$versions.zookeeper",
   jfreechart: "jfreechart:jfreechart:$versions.jfreechart",
